# ion_flux

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build_and_test.yml  build_and_test_and_publish.yml
docs/: API.md  Ion_Flux_project_structure.md  Pybamm_project_structure.md  project structure.md  project_structure.md
examples/: 0_simple_circuit.py  1_equivalent_circuit.py  1b_equivalent_circuit.py  2_macro_micro_spm.py  3_single_particle.py  4_swelling_spm.py  5_model_composition.py  6_DFN.py  6_demo.py  7_demo.py  8_OReaganPaper.py  8_sim.py  9_TSPMe.py  run_dfn.py  run_pybamm.py
models/: 1_TSPMe.py  2_OReaganPaper.py  3_Chen2020.py  Brosa2021_TSPMe.py  Chen2020_DFN.py  Marquis2019_1Plus1D_SPMe.py  ORegan2022_ThermalDFN.py
python/ion_flux/: __init__.py  cli.py  metrics.py
rust/: Cargo.toml  build.rs
rust/src/: lib.rs
rust/src/compiler/: ast.rs  codegen_cpu.rs
rust/src/solver/: adjoint.rs  bindings.rs  ida.rs  integrator.rs  jacobian.rs  linalg.rs  mod.rs  newton.rs  session.rs  sundials.rs
rust/src/solver_sundials/: ida.rs  mod.rs
tests/: conftest.py  test_mock_domain_parent_bug.py  test_tspme_diagnostics_2.py
tests/01_frontend_dsl/: test_ast_capture.py  test_ast_validation.py  test_frontend_api.py  test_model_composition.py  test_semantic_validation.py
tests/02_middle_end_codegen/: test_ale_moving_mesh.py  test_bug_diagnosis.py  test_codegen_oracles.py  test_codegen_robustness.py  test_complex_dae_topologies.py  test_cpp_emission.py  test_phase1_geometry.py  test_piecewise_auto_stitch.py  test_pipeline_diagnostics.py  (+4 more)
(+97 files in other folders)
