[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ion-flux"
version = "0.2.4"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
ion-flux = "ion_flux.cli:main"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "ion_flux._core"
python-source = "python"