[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "ion-flux"
version = "0.2.9"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.1.3,<2.4.4",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.6.0",
    "jinja2>=3.1.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.scripts]
ion-flux = "ion_flux.cli:main"

[tool.maturin]
manifest-path = "rust/Cargo.toml"
module-name = "ion_flux._core"
python-source = "python"