[package]
name = "ion_flux_core"
version = "0.2.3"
edition = "2021"

[lib]
name = "_core"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.27.0", features =["extension-module"] }
numpy = "0.27.0"
libloading = "0.8.0"
rayon = "1.10"
faer = "0.20.2" # Enables fast Sparse LU for highly-coupled 1D/2D Battery DAEs